Fixed chart legend spacing and refined syllabus graph alignment

--- a/public/css/syllabus.css
+++ b/public/css/syllabus.css
@@ -134,7 +134,9 @@
 
     width:85%;
 
-    margin:0 auto 10px;
+    margin:0 auto 6px;
+
+    padding-left:18px;
 
     font-size:34px;
 
